--- a/webroot/index.html
+++ b/webroot/index.html
@@ -13,7 +13,7 @@
 
 <script>
     $("#receive_button").click(function () {window.location = "/receive"})
-    $("#receive_button").click(function () {window.location = "/send"})
+    $("#send_button").click(function () {window.location = "/send"})
 </script>
 
 </body>
