--- a/webroot/index.html
+++ b/webroot/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>FileServer</title>
     <script src="/jquery-3.6.0.min.js"></script>
+    <script src="/basics.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
